Get all the challenges owned by the specified account (#172)
* Add empty function to get account challenges

* Get all challenges owned by the specified account

* Fix linter checks

* Update Challenge
